# derive-stable-id

./: Cargo.toml  README.md
src/: lib.rs
